# agent-loop-safeguard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
loop_safeguard/: __init__.py  backoff.py  detector.py  planner.py  safeguard.py  summarizer.py
scripts/: repro_task_manage_list_loop.py
tests/: test_backoff.py  test_detector.py  test_safeguard.py  test_summarizer.py
