[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-loop-safeguard"
version = "1.0.0"
description = "Loop detection, exponential backoff, auto-summarize at iter 15, and force re-planning for AI agent runtimes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["loop_safeguard"]
